--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+<meta name="robots" content="noindex,nofollow"/>
     <title>Perzik LLC</title>
 <meta name="robots" content="noindex,nofollow"/>
     <!-- Bootstrap core CSS -->
