--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">Perzik LLC</h1>
-              <p class="intro-text">Preparing
+              <p class="intro-text">We provide you 
 </p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About Perzik LLC</h2>
-            <p>Preparing</p>
+            <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2435.8593125429193!2d4.885968615802002!3d52.37297097978665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609c41038d757%3A0xf72ebcab3901bc45!2zU2luZ2VsIDI1MCwgMTAxNiBBQiBBbXN0ZXJkYW0sIOuEpOuNnOuegOuTnA!5e0!3m2!1sko!2skr!4v1529152650151" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></p>
           </div>
         </div>
       </div>
