--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">Perzik LLC</h1>
-              <p class="intro-text">Do you run a free manga, anime or porn website?<br />Just give your website domain via email! and just add<br />&lt;a href=&quothttp://www.perzik.eu&quotPerzik LLC&gt;Perzik LLC&lt;/a&gt;<br />This is it!
+              <p class="intro-text">Do you run a free manga, anime or porn website?<br />Just give your website domain via email! and just add<br />&lt;a href=&quothttp://www.perzik.eu&quotPerzik LLC&gt; target="_blank" &lt;/a&gt;<br />This is it!
 </p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
