--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">Perzik LLC</h1>
-              <p class="intro-text">Do you run a free manga, anime or porn website?<br />Just give your website domain via email! and just add<br />&lt;a href=&quot;http://www.perzik.eu&quot; target=&quot;_blank&quot;&gtPerzik LLC&lt;/a&gt;<br />This is it!
+              <p class="intro-text">Do you run a free manga, anime or porn website?<br />Just give your website domain via email! and just add<br />&lt;a href=&quot;http://www.perzik.eu&quot; target=&quot;_blank&quot;&gtPowered by Perzik LLC&lt;/a&gt;<br />This is it!
 </p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
