--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Our Services</h2>
+		  <p>Do you run a free manga, anime or porn website?<br />Just give your website domain via email! and just add<br />&lt;a href=&quot;http://www.rhay.net&quot; target=&quot;_blank&quot;&gtPowered by Rhay Net&lt;/a&gt;<br /></p>
           <p><a href="http://www.rhay.net" target="_blank">Rhay.net</a></p>
 		</div>
       </div>
